<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/ToolbarTextAppearance.Title"
            style="@style/MyToolbar"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:id="@+id/toolbar_shadow"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/toolbar_dropshadow" />

        <TextView
            android:id="@+id/title_human_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_human_translation"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar_shadow" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_human_tranlation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_human_translation"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp">

            <EditText
                android:id="@+id/text_human_tranlation"
                style="@style/FullWidthEdiTtext"
                android:hint="@string/hint_human_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|center_vertical" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_from_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_source_language"
            app:layout_constraintStart_toStartOf="@+id/from_spinner_human_translation"
            app:layout_constraintTop_toBottomOf="@+id/card_human_tranlation" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/from_spinner_human_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_from_language" />

        <ImageView
            android:id="@+id/less_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_less_languages_24dp"
            app:layout_constraintEnd_toStartOf="@+id/text_to_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_to_language" />

        <TextView
            android:id="@+id/text_to_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_to_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_spinner_human_translation" />

        <ImageView
            android:id="@+id/more_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_more_languages_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_to_language"
            app:layout_constraintTop_toTopOf="@+id/text_to_language" />

        <LinearLayout
            android:id="@+id/layout_to_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_to_language">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/more_spinner_human_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/custom_spinner_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_instrucctions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_to_spinner" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_instrucctions"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp">
            <android.support.design.widget.TextInputLayout
                android:padding="8dp"
                android:id="@+id/text_input_instructions"
                app:counterOverflowTextAppearance="@style/MyOverflowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                android:layout_below="@+id/editText2"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/text_instructions"
                    android:theme="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/sub_text_instructions"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/text_please"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_instructions" />

        <TextView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/topic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_please" />
        <TextView
            android:id="@+id/text_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:text="@string/text_topic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topic" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/topic_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_topic" />


        <Button
            android:id="@+id/submit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/submit_order"
            android:textColor="@color/blanco"
            android:theme="@style/MyButtonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topic_spinner" />

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>
